--- a/package.json
+++ b/package.json
@@ -16,5 +16,9 @@
         "postcss": "^8.4.14",
         "tailwindcss": "^3.1.0",
         "vite": "^4.0.0"
+    },
+    "dependencies": {
+        "@preline/overlay": "^1.4.0",
+        "preline": "^1.8.0"
     }
 }
